--- a/lab1/src/OP.html
+++ b/lab1/src/OP.html
@@ -9,12 +9,12 @@
 <body>
     <header>
         <h3 class="header-logo">ДЕШЕВА ПАЛЬ</h3>
-        <table>
-            <tr>
-                <td><a href="index.html">
-                    Головна
-                </a>
-                </td>
+        <nav>
+            <table>
+                <tr>
+                    <td><a href="index.html">
+                        Головна
+                    </a></td>
                 <td><a href="matan.html">
                     Матан
                 </a></td>
@@ -26,6 +26,7 @@
                 </a></td>
             </tr>
         </table>
+    </nav>
     </header>
     
     <main>
