--- a/lab1/src/asd.html
+++ b/lab1/src/asd.html
@@ -9,11 +9,12 @@
 <body>
     <header>
         <h3 class="header-logo">ДЕШЕВА ПАЛЬ</h3>
-        <table>
-            <tr>
-                <td><a href="index.html">
-                    Головна
-                </a>
+        <nav>
+            <table>
+                <tr>
+                    <td><a href="index.html">
+                        Головна
+                    </a>
                 </td>
                 <td><a href="matan.html">
                     Матан
@@ -24,8 +25,9 @@
                 <td><a href="contacts.html">
                     Контакти
                 </a></td>
-            </tr>
-        </table>
+                </tr>
+            </table>
+        </nav>
     </header>
     
     <main>
