--- a/lab1/src/contacts.html
+++ b/lab1/src/contacts.html
@@ -9,11 +9,12 @@
 <body>
     <header>
         <h3 class="header-logo">ДЕШЕВА ПАЛЬ</h3>
-        <table>
-            <tr>
-                <td><a href="index.html">
-                    Головна
-                </a>
+        <nav>
+            <table>
+                <tr>
+                    <td><a href="index.html">
+                        Головна
+                    </a>
                 </td>
                 <td><a href="matan.html">
                     Матан
@@ -26,6 +27,7 @@
                 </a></td>
             </tr>
         </table>
+        </nav>
     </header>
     
     <main>
