--- a/lab1/src/matan.html
+++ b/lab1/src/matan.html
@@ -9,23 +9,24 @@
 <body>
     <header>
         <h3 class="header-logo">ДЕШЕВА ПАЛЬ</h3>
-        <table>
-            <tr>
-                <td><a href="index.html">
-                    Головна
-                </a>
-                </td>
-                <td><a href="OP.html">
-                    ОП
-                </a></td>
-                <td><a href="asd.html">
-                    АСД
-                </a></td>
-                <td><a href="contacts.html">
-                    Контакти
-                </a></td>
-            </tr>
-        </table>
+        <nav>
+            <table>
+                <tr>
+                    <td><a href="index.html">
+                        Головна
+                    </a></td>
+                    <td><a href="OP.html">
+                        ОП
+                    </a></td>
+                    <td><a href="asd.html">
+                        АСД
+                    </a></td>
+                    <td><a href="contacts.html">
+                         Контакти
+                    </a></td>
+                </tr>
+            </table>
+        </nav>
     </header>
     
     <main>
