--- a/lab1/src/index.html
+++ b/lab1/src/index.html
@@ -45,7 +45,7 @@
 
         <section class="midl-section">
             <h3>Чому важко вчитись?</h3>
-            <ol>
+            <ol type="1">
                 <li>
                     Високі вимоги: дедлайни, курсові та контрольні роботи завжди під постійним тиском.
                 </li>
@@ -57,12 +57,6 @@
                 що робить навчання справжнім викликом для кожного.
                 </li>
             </ol>
-            <!--<p>
-                Високі вимоги: дедлайни, курсові та контрольні роботи завжди під постійним тиском.
-                Конкуренція серед найкращих студентів змушує докладати ще більше зусиль. 
-                Технічні предмети вимагають не лише знання теорії, але й багато практики, 
-                що робить навчання справжнім викликом для кожного.
-            </p>-->
         </section>
 
         <div class="right-side">
@@ -87,15 +81,17 @@
                 </div>
     
                 <div class="donw-right-column">
-                    <p>
-                        Купуючи готові роботи минулих років саме у нас, ви отримуєте якісний матеріал, перевірений часом і успішно використаний багатьма студентами. Наші роботи допоможуть вам не лише зрозуміти складні теми, а й зекономити час на виконанні задач. Всі роботи відповідають сучасним вимогам викладачів, тому ви можете бути впевненими у високих результатах.
-                    </p>
-                    <p>
-                        Ми пропонуємо не тільки широкий вибір робіт з різних дисциплін, але й індивідуальний підхід, що гарантує відповідність вашим потребам. Завдяки нашим матеріалам ви зможете легко підготуватися до заліків і екзаменів, залишивши стрес позаду. Успіх у навчанні з нами стає доступнішим!
-                    </p>
-                    <p>
-                        Наші ціни – доступні для кожного студента, а гарантія якості і постійна підтримка роблять співпрацю з нами приємною і ефективною. Ви можете бути впевнені в оригінальності і актуальності матеріалу, який допоможе вам впоратися з будь-якими навчальними викликами.
-                    </p>
+                    <ul>
+                        <li>
+                            Купуючи готові роботи минулих років саме у нас, ви отримуєте якісний матеріал, перевірений часом і успішно використаний багатьма студентами. Наші роботи допоможуть вам не лише зрозуміти складні теми, а й зекономити час на виконанні задач. Всі роботи відповідають сучасним вимогам викладачів, тому ви можете бути впевненими у високих результатах.
+                        </li>
+                        <li>
+                            Ми пропонуємо не тільки широкий вибір робіт з різних дисциплін, але й індивідуальний підхід, що гарантує відповідність вашим потребам. Завдяки нашим матеріалам ви зможете легко підготуватися до заліків і екзаменів, залишивши стрес позаду. Успіх у навчанні з нами стає доступнішим!
+                        </li>
+                        <li>
+                            Наші ціни – доступні для кожного студента, а гарантія якості і постійна підтримка роблять співпрацю з нами приємною і ефективною. Ви можете бути впевнені в оригінальності і актуальності матеріалу, який допоможе вам впоратися з будь-якими навчальними викликами.
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
