flex+gtid+table.v1

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           Lab 2 showcases CSS animations to enhance the user experience on a
           multi-page web application.
         </p>
-        <a href="lab2/src/index.html" class="view-button">View Project</a>
+        <a href="lab2/src/flexbox.html" class="view-button">View Project</a>
       </section>
       <section class="lab-work" id="lab3">
         <h3>Lab 3 - JavaScript Interactions</h3>
