--- a/lab2/src/table.html
+++ b/lab2/src/table.html
@@ -1,80 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Layout - Without Flexbox or Grid</title>
-    <link rel="stylesheet" href="table.css">
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Web Layout - Variant 9</title>
+   <link id = "theme-style" rel="stylesheet" href="table.css">
 </head>
 <body>
-    <header>
-        <h3 class="header-logo">ДЕШЕВА ПАЛЬ</h3>
-        <nav>
-            <table>
-                <tr>
-                    <td><a href="flexbox.html">FLEX</a></td>
-                    <td><a href="grid.html">GRID</a></td>
-                    <td><a href="table.html">TABLE</a></td>
-                </tr>
-            </table>
-        </nav>
-    </header>
-    <main>
-        <table class="layout">
+   <header class="top-bottom" id = "top">
+      <h3 class="header-logo">ДЕШЕВА ПАЛЬ</h3>
+      <nav>
+        <table>
             <tr>
-                <td class="left-side">
-                    <img src="img/fice_main.gif" width="300" alt="fice_main">
-                </td>
-                <td class="midl-section">
-                    <h3>Чому важко вчитись?</h3>
-                    <ol>
-                        <li>Високі вимоги: дедлайни, курсові та контрольні роботи завжди під постійним тиском.</li>
-                        <li>Конкуренція серед найкращих студентів змушує докладати ще більше зусиль.</li>
-                        <li>Технічні предмети вимагають не лише знання теорії, але й багато практики, що робить навчання справжнім викликом для кожного.</li>
-                    </ol>
-                </td>
-                <td class="right-side">
-                    <div class="up-row">
-                        <h3>
-                            НАШІ НАДЗВИЧАЙНІ ПЕРЕВАГИ!<br>
-                        </h3>
-                    </div>
-                    
-                    <div class="down-row">
-                        <div class="down-left-column">
-                            <p>
-                                Ви навіть не уявляєте, як іноді складно зробити певні роботи.
-                                Але не хвилюйтеся, адже ми завжди готові допомогти вам.
-                            </p>
-                            <p>
-                                Ми здатні відшукати роботи будь-якого року, зважаючи на ваші потреби.
-                            </p>
-                            <p>
-                                Все дуже просто: ви повідомляєте нам про свій запит, а ми виконувємо роботу швидко та ефективно.
-                            </p>
-                        </div>
-                
-                        <div class="down-right-column">
-                            <ul>
-                                <li>
-                                    Купуючи готові роботи минулих років саме у нас, ви отримуєте якісний матеріал, перевірений часом і успішно використаний багатьма студентами. Наші роботи допоможуть вам не лише зрозуміти складні теми, а й зекономити час на виконанні задач. Всі роботи відповідають сучасним вимогам викладачів, тому ви можете бути впевнені у високих результатах.
-                                </li>
-                                <li>
-                                    Ми пропонуємо не тільки широкий вибір робіт з різних дисциплін, але й індивідуальний підхід, що гарантує відповідність вашим потребам. Завдяки нашим матеріалам ви зможете легко підготуватися до заліків і екзаменів, залишивши стрес позаду. Успіх у навчанні з нами стає доступнішим!
-                                </li>
-                                <li>
-                                    Наші ціни – доступні для кожного студента, а гарантія якості і постійна підтримка роблять співпрацю з нами приємною і ефективною. Ви можете бути впевнені в оригінальності і актуальності матеріалу, який допоможе вам впоратися з будь-якими навчальними викликами.
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </td>
+                <td><a href="flexbox.html">
+                    FLEX
+                </a></td>
+                <td><a href="grid.html">
+                    GRID
+                </a></td>
+                <td><a href="table.html">
+                  TABLE
+                </a></td>
             </tr>
         </table>
-    </main>
-    <footer>
-        <p>&copy; 2024 Купити паль у гарному гуртожитку. Всі права захищені!</p>
-        <h3 class="footer-logo">ДЕШЕВА ПАЛЬ</h3>
-    </footer>
+      </nav>
+   </header>
+   <section class="main">
+      <div class="first-half">
+         <div class="left-side">
+            <img  src="img/fice_main.gif" width="250" alt="fice_main">
+         </div>
+         <div class="right-side">
+            <h3>Чому важко вчитись?</h3>
+            <ol type="1">
+                <li>
+                    1. Високі вимоги: дедлайни, курсові та контрольні роботи завжди під постійним тиском.
+                </li>
+                <li>
+                    2. Конкуренція серед найкращих студентів змушує докладати ще більше зусиль.
+                </li>
+                <li>
+                    3. Технічні предмети вимагають не лише знання теорії, але й багато практики, 
+                що робить навчання справжнім викликом для кожного.
+                </li>
+            </ol>
+         </div>
+      </div>
+      <div class="second-half">
+         <div class="up-row">
+            <h3>
+               НАШІ НАДЗВИЧАЙНІ ПЕРЕВАГИ!<br>
+           </h3>
+         </div>
+         <div class="down-row">
+            <div class="donw-left-column">
+               <p>
+                  Ви навіть не уявляєте, як іноді складно зробити певні роботи.
+                  Але не хвилюйтеся, адже ми завжди готові допомогти вам.
+              </p>
+              <p>
+                  Ми здатні відшукати роботи будь-якого року, зважаючи на ваші потреби.
+              </p>
+              <p>
+                  Все дуже  просто: ви повідомляєте нам про свій запит, а ми виконувємо роботу швидко та ефектив                        
+              </p>
+            </div>
+            <div class="donw-right-column">
+               <ul>
+                  <li>
+                      Купуючи готові роботи минулих років саме у нас, ви отримуєте якісний матеріал, перевірений часом і успішно використаний багатьма студентами. Наші роботи допоможуть вам не лише зрозуміти складні теми, а й зекономити час на виконанні задач. Всі роботи відповідають сучасним вимогам викладачів, тому ви можете бути впевненими у високих результатах.
+                  </li>
+                  <li>
+                      Ми пропонуємо не тільки широкий вибір робіт з різних дисциплін, але й індивідуальний підхід, що гарантує відповідність вашим потребам. Завдяки нашим матеріалам ви зможете легко підготуватися до заліків і екзаменів, залишивши стрес позаду. Успіх у навчанні з нами стає доступнішим!
+                  </li>
+                  <li>
+                      Наші ціни – доступні для кожного студента, а гарантія якості і постійна підтримка роблять співпрацю з нами приємною і ефективною. Ви можете бути впевнені в оригінальності і актуальності матеріалу, який допоможе вам впоратися з будь-якими навчальними викликами.
+                  </li>
+              </ul>
+            </div>
+         </div>
+      </div>
+   </section>
+   <footer class="top-bottom" id = "bottom">
+      <p>&copy; 2024 Купити паль у гарному гуртожитку. Всі права захищені!</p>
+      <h3 class="footer-logo">ДЕШЕВА ПАЛЬ</h3>
+   </footer>
 </body>
 </html>
