--- a/index.html
+++ b/index.html
@@ -38,20 +38,19 @@
         <a href="lab1/src/index.html" class="view-button">View Project</a>
       </section>
       <section class="lab-work" id="lab2">
-        <h3>Lab 2 - CSS Animations</h3>
+        <h3>Lab 2 - designed by different ways</h3>
         <p>
-          Lab 2 showcases CSS animations to enhance the user experience on a
-          multi-page web application.
+          Lab 2 same pattern designed by 3 different ways.
+          Grid, flexbox and without it.
         </p>
         <a href="lab2/src/flexbox.html" class="view-button">View Project</a>
       </section>
       <section class="lab-work" id="lab3">
-        <h3>Lab 3 - JavaScript Interactions</h3>
+        <h3>TO DO</h3>
         <p>
-          A JavaScript-driven project where I implemented various dynamic
-          interactions, form validation, and DOM manipulation techniques.
+          TO DO
         </p>
-        <a href="lab3/src/index.html" class="view-button">View Project</a>
+        <a href="lab3/src/email_wabepage.html" class="view-button">View Project</a>
       </section>
     </main>
     <footer>
