--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p>
           TO DO
         </p>
-        <a href="lab3/src/email_wabepage.html" class="view-button">View Project</a>
+        <a href="lab3/src/mobile_page.html" class="view-button">View Project</a>
       </section>
     </main>
     <footer>
