Add Lab 3 mobile app page add Lab 4 desktop page with styles, not finished mobail version

--- a/index.html
+++ b/index.html
@@ -46,11 +46,20 @@
         <a href="lab2/src/flexbox.html" class="view-button">View Project</a>
       </section>
       <section class="lab-work" id="lab3">
+        <h3>Lab 3 - page for mobile app</h3>
+        <p>
+          This project is a simple page for a mobile app. It demonstrates the
+          use of media queries to create a responsive design that adapts to
+          different screen sizes.
+        </p>
+        <a href="lab3/src/desktop_page.html" class="view-button">View Project</a>
+      </section>
+      <section class="lab-work" id="lab4">
         <h3>TO DO</h3>
         <p>
           TO DO
         </p>
-        <a href="lab3/src/mobile_page.html" class="view-button">View Project</a>
+        <a href="lab4/src/desktop_page.html" class="view-button">View Project</a>
       </section>
     </main>
     <footer>
