add mobile version

--- a/lab4/src/desktop_page.html
+++ b/lab4/src/desktop_page.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <header>
-           <input type="text" placeholder="Search">
-            <h1>≡</h1>
+        <div class="search-container">
+            <input type="text" placeholder="Search">
+            <span class="search-icon">🔍</span>
+        </div>
+        <h1>≡</h1>
     </header>
 
     <main>
