fixed link in main

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           use of media queries to create a responsive design that adapts to
           different screen sizes.
         </p>
-        <a href="lab3/src/desktop_page.html" class="view-button">View Project</a>
+        <a href="lab3/src/mobile_page.html" class="view-button">View Project</a>
       </section>
       <section class="lab-work" id="lab4">
         <h3>TO DO</h3>
