Update Lab 4 section with project description and heading

--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@
         <a href="lab3/src/mobile_page.html" class="view-button">View Project</a>
       </section>
       <section class="lab-work" id="lab4">
-        <h3>TO DO</h3>
+        <h3>Lab 4 - page by reference</h3>
         <p>
-          TO DO
+          This project is a simple page for a desktop and mobile. It demonstrates the
+          use of media queries to create a responsive design that adapts to
+          different screen sizes.
         </p>
         <a href="lab4/src/desktop_page.html" class="view-button">View Project</a>
       </section>
