--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
         </p>
         <a href="lab4/src/desktop_page.html" class="view-button">View Project</a>
       </section>
+      <section class="lab-work" id="lab5">
+        <h3>Lab 5 - TODO</h3>
+        <p>
+          TODO
+        </p>
+        <a href="lab5/src/page.html" class="view-button">View Project</a>
     </main>
     <footer>
       <p>&copy; 2024 Ruslan Tkachenko. All rights reserved.</p>
