Update Lab 5 section with title and description

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         <a href="lab4/src/desktop_page.html" class="view-button">View Project</a>
       </section>
       <section class="lab-work" id="lab5">
-        <h3>Lab 5 - TODO</h3>
+        <h3>Lab 5 - js functions</h3>
         <p>
-          TODO
+          This page implements a simple JavaScript function that changes content of pages's elements.
         </p>
         <a href="lab5/src/page.html" class="view-button">View Project</a>
     </main>
