Add Lab 6 section with project details and create main and second pages

--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@
           This page implements a simple JavaScript function that changes content of pages's elements.
         </p>
         <a href="lab5/src/page.html" class="view-button">View Project</a>
+      </section>
+      <section class="lab-work" id="lab6">
+        <h3>Lab 6 - page with accordion</h3>
+        <p>
+          This project is a simple page for a desktop and mobile. 
+          It demonstrates implemented accordion using HTML, CSS, JavaScript as frontend
+          and ASP.NET Core with PostgreSQL as backend to save accordion in DB.
+        </p>
+        <a href="lab6/src/main_page.html" class="view-button">View Project</a>
+      </section>
     </main>
     <footer>
       <p>&copy; 2024 Ruslan Tkachenko. All rights reserved.</p>
